--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,13 +6,13 @@
     align-items: center;
     background-color: rgba(158,158,158,.2);
     font-family: 'Roboto', sans-serif;
-    font-size: 12px;
+    font-size: 12px;;
 }
 
 
 
 nav ul{
-    height: 20px;
+    height: 30px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -21,8 +21,11 @@ nav ul{
 nav ul li {
     list-style: none;
     padding: 0 23px;
+    font-weight: bolder;
+    text-transform: uppercase;
 }
 
 nav ul li:hover {
     color: orange;
 }
+
